tests/FAIL/typesystem/if.c
#include <stdio.h>
int main(){
  int num = 5;

  if(1){
    printf("good\n");
  }

  if(num){
    printf("OK\n");
  }

  float b = 1.5;

  while(b > num){
  /*   b = b - 1; */
  }

  if('b'){
    printf("OKAY\n");
  }


  int a = 1;
  char c = 'c';
  if(a + b + c){
     printf("OKay lets go\n");
  }

  return 0;
}
